# SearchTermRating

./: .gitignore  README.md  bootstrap_terms_ranker.py  pyproject.toml  run_SearchTermRating.bat
src/: cli.py  config.py  gui_app.py  image_search.py  model.py  settings.py  storage.py  utils.py
src/SearchTermRating/: __init__.py  __main__.py  cli.py  rating.py
src/SearchTermRating.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
terms-ranker/: .gitignore  README.md  pyproject.toml
terms-ranker/examples/: terms.csv
terms-ranker/legacy/: README.txt
terms-ranker/src/termsranker/: app.py  core.py  dedupe.py  gallery_cli.py  images.py  persistence.py  progress_3d.py
